--- a/Gameplay.PlayableNodes.Core/package.json
+++ b/Gameplay.PlayableNodes.Core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.avmedvedskiy.playblenodes.core",
   "displayName": "Gameplay.PlayableNodes.Core",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "unity": "2022.3",
   "author": "avmedvedskiy",
   "description": "Playable Node Core",
@@ -9,5 +9,11 @@
     "animations",
     "nodes",
 	"dynamic"
-  ]
+  ],
+  "documentationUrl": "https://github.com/avmedvedskiy/PlayableNodes",
+  "changelogUrl": "https://github.com/avmedvedskiy/PlayableNodes",
+  "_upm":
+  {
+	  "changelog" : "### Fixes & Improvements\n - Add ChangeTargetByPin() method"
+  }
 }
