--- a/Gameplay.PlayableNodes.Tween/package.json
+++ b/Gameplay.PlayableNodes.Tween/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.avmedvedskiy.playblenodes.tween",
   "displayName": "Gameplay.PlayableNodes.Tween",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "unity": "2022.3",
   "author": "avmedvedskiy",
   "description": "Playable Node Tween",
@@ -9,5 +9,11 @@
     "animations",
     "nodes",
 	"dynamic"
-  ]
+  ],
+  "documentationUrl": "https://github.com/avmedvedskiy/PlayableNodes",
+  "changelogUrl": "https://github.com/avmedvedskiy/PlayableNodes",
+  "_upm":
+  {
+	  "changelog" : "### Fixes & Improvements\n - Update Documentation"
+  }
 }
